yaml/cliente1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cliente1-ingress
  namespace: bdb-cliente1-des
  annotations:
    kubernetes.io/ingress.class: cliente1-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: cliente1app
            servicePort: 80
          path: /cliente1(/|$)(.*)
